# my_project

./: .gitignore  theCommands.txt
SAM_Vision_Test/: NVIDIA_gpu_test.py  run_sam_ultralytics.py
annotated-transformer/: AnnotatedTransformer_6_9_8_55.py  chinese.py  chineseTrans.py  french.py  frenchTrans.py  frenchTrans_save.py  germanTrans.py  russianTrans.py  spanish.py  thai.py  thaiTrans.py  thaiTrans_v2.py  the_annotated_transformer.py
code_journalArt/: Create_Conda_Environment.html  L_predict_result.txt  attention-keras-legacy.yml  attention_lstm_model.h5  attention_lstm_save.py  attention_lstm_save2.py  attention_lstm_working_keras210.py  main_new.py  main_new_save.py  main_new_working_keras210.py  myPythonPiece.py  preprocess.py  test.json  theCommands.txt
cscharp_matlab_mathematica/: convertLatex.py  economic_grid_optimizer.py  gpu_stress_test.py  math_algebra.py  math_algebra_objects.py  math_with_numerics.py  mathematica1.py  matlab_numpy.py  pipeline_solve.py  pytorchGPU.py  run_matlab_model.py  wolfram_compute.py
fastWalshTransform/: KimStyle.py  MultiNew_Attn.py  MultiNew_Invokable.py  ThetaVsH.py  TransStyle.py  WalshAttention.py  analyze_cuda_gdb_steps_log.py  build_fastwalh_corrected.sh  build_fastwalh_corrected_new.sh  build_fastwalsh.sh  build_fastwalsh_full.sh  build_fastwalsh_full_save.sh  check_cluster.cu  check_tma.cu  cuda_gdb_pty_driver_steps10_more.py  cuda_gdb_pty_steps10.md  cuda_gdb_steps_analysis.json  cuda_gdb_steps_analysis.md  ginanone.py  (+21 more)
llm_study/: CMakeLists.txt  lim_cuda.cu  lim_grid_cuda.cu  python_plot.py  theCommands.txt
(+169 files in other folders)
